# tv-mcp

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.example.json  pyproject.toml
docs/integrations/: README.md  adk.md  ai-sdk.md  claude.md  gemini.md  langchain.md  openai.md
src/tv_mcp/: __init__.py  __main__.py  auth.py  cli.py  logging_setup.py  server.py  settings.py
src/tv_mcp/tools/: __init__.py  _common.py  auth.py  curves.py  discovery.py  tickers.py
src/tv_mcp/transports/: __init__.py  http.py
src/tv_mcp/tv/: __init__.py  client.py  errors.py
tests/: conftest.py  test_auth.py  test_client.py  test_error_handling.py  test_http.py  test_input_validation.py  test_require_key.py  test_settings.py  test_smoke.py  test_tools_curves.py  test_tools_discovery.py  test_tools_tickers.py
