[project]
name = "tv-mcp"
version = "0.2.0"
description = "Model Context Protocol server for Trading Volatility — discover and retrieve options market-structure data (GEX, gamma, skew, options flow, ranked trade setups) conversationally over the public v2 API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Trading Volatility" }]
keywords = ["mcp", "model-context-protocol", "options", "volatility", "gex", "gamma", "trading"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # Official MCP Python SDK (FastMCP) — pinned at scaffold time (T0.1). Latest 1.27.x.
    "mcp>=1.27,<2",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Needed only for the remote streamable-HTTP transport; small and standard.
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "respx>=0.21",
    "pip-audit>=2.7",
]

[project.scripts]
# Local agents launch `uvx tv-mcp` / `pipx run tv-mcp` → stdio by default.
# Pass `--transport http` (or set TV_MCP_TRANSPORT=http) for the remote server.
tv-mcp = "tv_mcp.cli:main"

[project.urls]
Homepage = "https://stocks.tradingvolatility.net"
Documentation = "https://stocks.tradingvolatility.net/api/v2/docs"
Repository = "https://github.com/tradingvolatility/tv-mcp"
Issues = "https://github.com/tradingvolatility/tv-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tv_mcp"]

# Minimal source distribution: `uv publish` uploads the sdist alongside the wheel, and
# hatchling otherwise sweeps the whole repo. Ship only what's needed to build and install the
# package — no docs/, tests/, scripts/, Dockerfile, or example config. AGENTS.md (repo root)
# stays because the wheel's force-include needs it when the wheel is built from the sdist.
[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/AGENTS.md",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

# Ship the agent-discovery file inside the package so the server can serve it at /AGENTS.md
# from any install (wheel, container) without depending on the working directory.
[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "tv_mcp/AGENTS.md"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
